ratelimiting improvements + clippy fixes
